# MilestoneX-Contracts

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  README_ASSETS.md  SECURITY.md  SIGNING_FLOW.md  VERIFICATION_CHECKLIST.md  deny.toml  rustfmt.toml  wallet_connect.html
campaign/: Cargo.toml
campaign/src/: contract.rs  errors.rs  event.rs  get_all_milestones.rs  get_milestone.rs  lib.rs  multi_asset_release.rs  release_milestone.rs  storage.rs  test_token_scratch.rs  types.rs  views.rs
campaign/src/test/: budget_invariant_tests.rs  claim_refund_tests.rs  diagnostics_tests.rs  get_campaign_status_tests.rs  integration_tests.rs  invariant_tests.rs  negative_path_tests.rs  refund_eligibility_tests.rs  release_milestone_tests.rs  scratch_test.rs
campaign/test_snapshots/get_all_milestones/tests/: returns_all_milestones_for_multiple.1.json  returns_all_milestones_when_empty.1.json
campaign/test_snapshots/get_milestone/tests/: enriched_carries_pending_release_and_is_next_pending.1.json  enriched_is_fully_released_when_milestone_is_released.1.json  enriched_locked_milestone_is_not_marked_next_pending.1.json  panics_on_index_equal_to_milestone_count.1.json  returns_correct_milestone_for_non_zero_index.1.json  returns_raw_data_for_index_zero.1.json
campaign/test_snapshots/test/claim_refund_tests/: test_claim_refund_active_campaign.1.json  test_claim_refund_already_claimed.1.json  test_claim_refund_ended_no_milestones_eligibility.1.json  test_claim_refund_ended_with_milestone_released.1.json  test_claim_refund_ended_with_released_milestone_eligibility.1.json  test_claim_refund_exactly_at_window_boundary.1.json  test_claim_refund_goal_reached_campaign.1.json  test_claim_refund_no_donor_eligibility.1.json  test_claim_refund_no_donor_record.1.json  test_claim_refund_one_second_past_window.1.json  test_claim_refund_window_closed.1.json
campaign/test_snapshots/test/get_campaign_status_tests/: calculates_days_remaining.1.json  returns_cancelled_status.1.json  returns_ended_status.1.json
campaign/test_snapshots/test/integration_tests/: test_donate_below_minimum_panics_assert.1.json  test_donate_happy_path.1.json  test_lifecycle_end_and_refund_eligibility.1.json  test_lifecycle_multi_milestone_unlock.1.json
campaign/test_snapshots/test/negative_path_tests/: test_claim_refund_eligible_cancelled.1.json  test_claim_refund_fails_already_claimed.1.json  test_claim_refund_fails_campaign_active.1.json  test_donate_fails_below_minimum.1.json  test_donate_fails_campaign_cancelled.1.json  test_donate_fails_campaign_ended.1.json  test_donate_fails_negative_amount.1.json  test_donate_fails_not_initialized.1.json  test_edge_case_no_donor_record.1.json  test_end_campaign_fails_already_ended.1.json  test_end_campaign_fails_cancelled.1.json  test_end_then_refund_eligible.1.json  test_full_lifecycle_happy_path.1.json  test_get_milestone_view_fails_out_of_bounds.1.json  test_initialize_fails_already_initialized.1.json  test_initialize_fails_past_end_time.1.json  test_is_refund_eligible_fails_active_campaign.1.json  test_is_refund_eligible_fails_already_claimed.1.json  test_is_refund_eligible_fails_ended_with_released_milestones.1.json  test_is_refund_eligible_fails_goal_reached.1.json  test_is_refund_eligible_fails_no_campaign.1.json  test_is_refund_eligible_fails_no_donor_record.1.json  test_is_refund_eligible_fails_window_closed.1.json  test_reentrancy_lock_donate_twice_succeeds.1.json  test_refund_window_edge_boundary.1.json  test_refund_window_just_after_boundary.1.json
campaign/test_snapshots/test/refund_eligibility_tests/: test_refund_eligible_campaign_cancelled.1.json  test_refund_eligible_campaign_ended_no_milestone_released.1.json  test_refund_not_eligible_already_claimed.1.json  test_refund_not_eligible_campaign_active.1.json  test_refund_not_eligible_campaign_goal_reached.1.json  test_refund_not_eligible_no_campaign.1.json  test_refund_not_eligible_no_donor_record.1.json  test_refund_not_eligible_window_closed.1.json  test_refund_window_edge_case_exactly_30_days.1.json  test_refund_window_edge_case_one_second_after_30_days.1.json
campaign/test_snapshots/test/release_milestone_tests/: test_double_release_panics.1.json  test_final_milestone_releases_remaining_balance.1.json  test_frozen_contract_release_panics.1.json  test_locked_milestone_release_panics.1.json  test_non_creator_release_panics.1.json  test_release_non_existent_milestone_panics.1.json  test_sequential_milestone_release_succeeds.1.json  test_skipping_milestone_release_panics.1.json  test_valid_release_updates_milestone_status.1.json
campaigns-registry/: Cargo.toml
campaigns-registry/src/: contract.rs  event.rs  lib.rs  storage.rs  types.rs
campaigns-registry/src/test/: concurrent_campaigns_tests.rs  create_campaign_tests.rs  donate_tests.rs  mod.rs  status_transition_tests.rs
crates/contracts/core/: Cargo.toml
crates/contracts/core/src/: lib.rs
crates/contracts/core/src/assets/: mod.rs
crates/contracts/core/test_snapshots/tests/: test_active_campaign_count_tracking.1.json  test_campaign_report_progress_clamped.1.json  test_count_total_transactions_split.1.json  test_create_and_donate_with_metadata_and_tracking.1.json  test_get_campaign_report_accuracy.1.json  (+7 more)
(+41 files in other folders)
