[workspace]
resolver = "2"
members = [
    "campaign",
    "common",
    "crates/contracts/core",
    "crates/tools",
    "token-bridge",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"

[workspace.dependencies]
soroban-sdk = { version = "26.0.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dotenv = "0.15"
common = { package = "milestonex-common", path = "common" }
# Workspace-wide exact pin for ed25519-dalek. soroban-env-host 26.1.3
# testutils (used by soroban-sdk's testutils feature) calls
# SigningKey::generate(chacha) with a rand 0.8 ChaCha20Rng. In
# ed25519-dalek 2.2 this takes the rand_core 0.6 CryptoRng surface
# (satisfied by ChaCha20Rng). In 3.0 the trait bound changed to
# rand_core 0.9 CryptoRng, which ChaCha20Rng does not implement, and
# 2.2 already diverges on some APIs. Pinning workspace-wide to 2.2.0
# forces a single version across campaign's testutils and the
# milestonex-tools ^2.2 range.
ed25519-dalek = "=2.2.0"

# [patch.crates-io] is needed because the workspace-deps pin above only
# constrains direct uses in workspace members. soroban-env-host 26.1.3
# is a transitive dep of soroban-sdk 26.0.1 (pulled in by the
# `testutils` feature) and its own version requirement is independent.
# Patching forces all uses of ed25519-dalek — including the
# transitive dep — to use the git tag v2.2.0, which keeps the
# rand_core 0.6 CryptoRng surface that ChaCha20Rng satisfies.
[patch.crates-io]
ed25519-dalek = { git = "https://github.com/dalek-cryptography/ed25519-dalek", tag = "v2.2.0" }
