[workspace]
resolver = "2"
members = [
    "campaign",
    "common",
    "crates/contracts/core",
    "crates/tools",
    "token-bridge",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"

[workspace.dependencies]
soroban-sdk = { version = "26.0.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dotenv = "0.15"
common = { package = "milestonex-common", path = "common" }
# Workspace-wide exact pin for ed25519-dalek = 2.2.0. The transitive
# soroban-env-host 26.1.3 testutils code calls
# `SigningKey::generate(chacha)` with a rand 0.8 ChaCha20Rng. In
# ed25519-dalek 2.x this requires the rand_core 0.6 `CryptoRng`
# surface (satisfied by ChaCha20Rng). In 3.0 the trait bound
# changed to rand_core 0.9 `CryptoRng`, which ChaCha20Rng does
# not implement. The workspace pin constrains direct uses in
# workspace members; the [patch.crates-io] below extends the
# override to the transitive dep so the testutils build picks
# 2.2.0 as well.
ed25519-dalek = "=2.2.0"

# Force ed25519-dalek = 2.2.0 for the entire resolution graph,
# including transitive uses pulled in by `soroban-env-host`
# (testutils feature of `soroban-sdk`). soroban-env-host declares
# `ed25519-dalek >= 2.0.0`, which 2.2.0 satisfies. Cargo will
# auto-discover the `ed25519-dalek` subdirectory in the monorepo
# by searching for a `Cargo.toml` with `name = "ed25519-dalek"`.
# The `rev` pins to a specific commit SHA for reproducibility
# (a tag is mutable; a commit SHA is not).
#
# Repository: dalek-cryptography/curve25519-dalek (monorepo)
# Tag:        ed25519-2.2.0 (verified to exist via `git ls-remote`)
# Commit:     8016d6d9b9cdbaa681f24147e0b9377cc8cef934
# Subdir:     ed25519-dalek/  (auto-discovered by cargo)
[patch.crates-io]
ed25519-dalek = { git = "https://github.com/dalek-cryptography/curve25519-dalek", rev = "8016d6d9b9cdbaa681f24147e0b9377cc8cef934" }
