[package]
name = "milestonex-campaign"
version = "0.1.0"
edition = "2021"
description = "MilestoneX campaign smart contract — milestones, donations, refunds, and lifecycle"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
common = { workspace = true }

[dev-dependencies]
soroban-sdk = { version = "26.0.1", features = ["testutils"] }
# Pin ed25519-dalek to 2.x: soroban-env-host 26.1.3's testutils
# (register_stellar_asset_contract_v2) requires the rand_core 0.6
# CryptoRng signature that was removed in ed25519-dalek 3.0.0.
ed25519-dalek = "=2.1.1"
